--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <springframework.version>4.2.5.RELEASE</springframework.version>
     <aspectj.version>1.7.4</aspectj.version>
+    <compiler.target>1.8</compiler.target>
   </properties>
 
   <dependencies>
@@ -43,30 +44,40 @@
   
   <build>
   	<plugins>
-  		<plugin>
-			<artifactId>maven-jar-plugin</artifactId>
-			<version>2.6</version>
- <configuration>
-          <archive>
+<!--   		<plugin> -->
+<!-- 			<artifactId>maven-jar-plugin</artifactId> -->
+<!-- 			<version>2.6</version> -->
+<!--  <configuration> -->
+<!--           <archive> -->
           
-            <index>true</index>
-            <manifest>
-              <addClasspath>true</addClasspath>
-              <classpathPrefix>dependency/</classpathPrefix>
-              <mainClass>com.apress.prospring4.ch2.HelloWorldSpringDI</mainClass>
-            </manifest>
-          </archive>
-        </configuration>  		
-        </plugin>
+<!--             <index>true</index> -->
+<!--             <manifest> -->
+<!--               <addClasspath>true</addClasspath> -->
+<!--               <classpathPrefix>dependency/</classpathPrefix> -->
+<!--               <mainClass>com.apress.prospring4.ch2.HelloWorldSpringDI</mainClass> -->
+<!--             </manifest> -->
+<!--           </archive> -->
+<!--         </configuration>  		 -->
+<!--         </plugin> -->
         <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.0</version>
                 <configuration>
-                   <source>1.8</source>
-                   <target>1.8</target>
+                   <source>${compiler.target}</source>
+                   <target>${compiler.target}</target>
                 </configuration>
-        </plugin>        
+        </plugin>  
+	      <plugin>
+	        <groupId>org.codehaus.mojo</groupId>
+	        <artifactId>aspectj-maven-plugin</artifactId>
+	        <version>1.5</version>
+	        <executions>
+	          <execution>
+	          	<phase>compile</phase>
+	          </execution>
+	        </executions>
+	      </plugin>              
   	</plugins>
   </build>
 </project>
